@@ -115,8 +115,12 @@ class DatabaseMysql extends DatabaseBase {
 				if( $wgDBmysql5 ) {
 					$this->query( 'SET NAMES utf8', __METHOD__ );
 				}
-				// Turn off strict mode
-				$this->query( "SET sql_mode = ''", __METHOD__ );
+				// Set SQL mode, default is turning them all off, can be overridden or skipped with null
+				global $wgSQLMode;
+				if ( is_string( $wgSQLMode ) ) {
+					$mode = $this->addQuotes( $wgSQLMode );
+					$this->query( "SET sql_mode = $mode", __METHOD__ );
+				}
 			}
 
 			// Turn off strict mode if it is on
